@@ -89,6 +89,7 @@ Release 2.13 Start 14/02/2021
 54. svctool: link env variables for QUEUE in qmail-send, qmail-smtp with
     control/defaultqueue
 55. envdir_set.c: changed error message
+56. svctool: create CONFSPLIT variable
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 2.12 Start 21/05/2020
